k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1
  namespace: fargate-wl
spec:
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
      - name: myapp1
        image: stacksimplify/kube-nginxapp1:1.0.0
        ports:
        - containerPort: 80
