k8s/ca-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-demo-deployment
  namespace: ca-test
  labels:
    app: ca-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-nginx
  template:
    metadata:
      labels:
        app: ca-nginx
    spec:
      containers:
      - name: ca-nginx
        image: stacksimplify/kubenginx:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ca-demo-service-nginx
  namespace: ca-test
  labels:
    app: ca-nginx
spec:
  type: LoadBalancer
  selector:
    app: ca-nginx
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 31233
