k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  namespace: fargate-wl
spec:
  type: NodePort
  selector:
    app: myapp1
  ports:
  - port: 80
    targetPort: 80
